--- a/DNTProfiler.Infrastructure/Views/ConnectionsView.xaml
+++ b/DNTProfiler.Infrastructure/Views/ConnectionsView.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl x:Class="DNTProfiler.Infrastructure.Views.ConnectionsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:behaviors="clr-namespace:DNTProfiler.Common.Behaviors;assembly=DNTProfiler.Common"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid x:Name="ThisGrid">
         <ListView ItemsSource="{Binding GuiModelData.RelatedConnections}"
@@ -44,6 +44,13 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding ConnectionId, Mode=OneTime}"  />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Width="150" Header="Duration (ms)" behaviors:GridViewSortBehavior.PropertyName="Duration">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Duration, StringFormat={}{0:n0}}"  />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
